tdf#148478 pptx export: only export ASCII .wav filenames

MS PowerPoint reports a corrupt presentation
if one of the ppt/media files contains non-ascii characters.

make CppunitTest_sd_export_tests-ooxml3 \
    CPPUNIT_TEST_NAME=testTdf148478_transitionMusic

Change-Id: Ide5c5d38b4517e7a933fb8d414d901b49b15faca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193435
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit e9f5d6ce38830c6911f788aae0d99407d9fee467)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193546
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>